--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -1,5 +1,8 @@
 {
 	"talk_title": "講話",
 	"speech": "演講",
-	"translation": "翻譯"
+	"translation": "翻譯",
+	"select_text_first": "先選擇文字",
+	"lets_talk": "讓我們談談",
+	"recognizing": "認識"
 }
