Do not translate in the same language #109

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,6 @@
 	"translation": "Translation",
 	"select_text_first": "Select text first",
 	"lets_talk": "Let's talk",
-	"recognizing": "recognizing"
+	"recognizing": "recognizing",
+	"select_different_language": "Select different language"
 }
