--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,5 +4,6 @@
 	"translation": "翻訳",
 	"select_text_first": "テキストを選択してください",
 	"lets_talk": "話してみましょう",
-	"recognizing": "認識中"
+	"recognizing": "認識中",
+	"select_different_language": "他の言語を選択してください"
 }
