--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -4,5 +4,6 @@
 	"translation": "번역",
 	"select_text_first": "먼저 텍스트 선택",
 	"lets_talk": "이야기하자",
-	"recognizing": "인식"
+	"recognizing": "인식",
+	"select_different_language": "다른 언어 선택"
 }
