--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -4,5 +4,6 @@
 	"translation": "翻譯",
 	"select_text_first": "先選擇文字",
 	"lets_talk": "讓我們談談",
-	"recognizing": "認識"
+	"recognizing": "認識",
+	"select_different_language": "選擇另一種語言"
 }
