--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,7 @@
 	"select_text_first": "Select text first",
 	"lets_talk": "Let's talk",
 	"recognizing": "recognizing",
-	"select_different_language": "Select different language"
+	"select_different_language": "Select different language",
+	"enter_new_text": "Enter new text",
+	"enter_new_translation": "Enter new translation"
 }
