--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -5,5 +5,7 @@
 	"select_text_first": "テキストを選択してください",
 	"lets_talk": "話してみましょう",
 	"recognizing": "認識中",
-	"select_different_language": "他の言語を選択してください"
+	"select_different_language": "他の言語を選択してください",
+	"enter_new_text": "新しいテキストを入力する",
+	"enter_new_translation": "新しい翻訳を入力する"
 }
