--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -5,5 +5,7 @@
 	"select_text_first": "먼저 텍스트 선택",
 	"lets_talk": "이야기하자",
 	"recognizing": "인식",
-	"select_different_language": "다른 언어 선택"
+	"select_different_language": "다른 언어 선택",
+	"enter_new_text": "새 텍스트 입력",
+	"enter_new_translation": "새 번역 입력"
 }
