--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -5,5 +5,7 @@
 	"select_text_first": "先選擇文字",
 	"lets_talk": "讓我們談談",
 	"recognizing": "認識",
-	"select_different_language": "選擇另一種語言"
+	"select_different_language": "選擇另一種語言",
+	"enter_new_text": "輸入新文本",
+	"enter_new_translation": "輸入新翻譯"
 }
