Add Sign in / Sign up i18n #141

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,5 +7,7 @@
 	"recognizing": "recognizing",
 	"select_different_language": "Select different language",
 	"enter_new_text": "Enter new text",
-	"enter_new_translation": "Enter new translation"
+	"enter_new_translation": "Enter new translation",
+	"sign_in": "Sign in",
+	"sign_up": "Sign up"
 }
