--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -7,5 +7,7 @@
 	"recognizing": "ការទទួលស្គាល់",
 	"select_different_language": "ជ្រើសរើសភាសាផ្សេង",
 	"enter_new_text": "វាយអត្ថបទថ្មី។",
-	"enter_new_translation": "វាយការបកប្រែថ្មី។"
+	"enter_new_translation": "វាយការបកប្រែថ្មី។",
+	"sign_in": "ចូល",
+	"sign_up": "ចុះ​ឈ្មោះ"
 }
