--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -8,6 +8,12 @@
 	"select_different_language": "選擇另一種語言",
 	"enter_new_text": "輸入新文本",
 	"enter_new_translation": "輸入新翻譯",
-  "sign_in": "登入",
-	"sign_up": "報名"
+	"sign_in": "登入",
+	"sign_up": "報名",
+	"enter_pin_code": "輸入密碼",
+	"pin_code_is_required": "密碼是必需的。",
+	"wrong_credentials": "您輸入了錯誤的憑據。",
+	"submit": "提交",
+	"pin_code": "PIN碼",
+	"logout": "登出"
 }
