--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -9,5 +9,11 @@
 	"enter_new_text": "新しいテキストを入力する",
 	"enter_new_translation": "新しい翻訳を入力する",
 	"sign_in": "サインイン",
-	"sign_up": "サインアップ"
+	"sign_up": "サインアップ",
+	"enter_pin_code": "PINコードを入力してください",
+	"pin_code_is_required": "PINコードは必須です",
+	"wrong_credentials": "PINコードが間違っています。",
+	"submit": "送信",
+	"pin_code": "PINコード",
+	"logout": "ログアウト"
 }
