--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -9,5 +9,11 @@
 	"enter_new_text": "វាយអត្ថបទថ្មី។",
 	"enter_new_translation": "វាយការបកប្រែថ្មី។",
 	"sign_in": "ចូល",
-	"sign_up": "ចុះ​ឈ្មោះ"
+	"sign_up": "ចុះ​ឈ្មោះ",
+	"enter_pin_code": "បញ្ចូលលេខកូដសម្ងាត់",
+	"pin_code_is_required": "តម្រូវ​ឱ្យ​មាន​កូដ PIN ។",
+	"wrong_credentials": "អ្នក​បាន​បញ្ចូល​ព័ត៌មាន​សម្ងាត់​ខុស។",
+	"submit": "ដាក់ស្នើ",
+	"pin_code": "លេខសម្ងាត់",
+	"logout": "ចាកចេញ"
 }
