--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -9,5 +9,11 @@
 	"enter_new_text": "새 텍스트 입력",
 	"enter_new_translation": "새 번역 입력",
 	"sign_in": "로그인",
-	"sign_up": "가입하기"
+	"sign_up": "가입하기",
+	"enter_pin_code": "핀 코드 입력",
+	"pin_code_is_required": "핀 코드가 필요합니다.",
+	"wrong_credentials": "잘못된 자격 증명을 입력했습니다.",
+	"submit": "제출하다",
+	"pin_code": "핀 코드",
+	"logout": "로그 아웃"
 }
