--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -15,5 +15,6 @@
 	"wrong_credentials": "您輸入了錯誤的憑據。",
 	"submit": "提交",
 	"pin_code": "PIN碼",
-	"logout": "登出"
+	"logout": "登出",
+	"email": "電子郵件"
 }
