--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -10,6 +10,7 @@
 	"enter_new_translation": "새 번역 입력",
 	"sign_in": "로그인",
 	"sign_up": "가입하기",
+	"continue": "계속하다",
 	"enter_pin_code": "핀 코드 입력",
 	"pin_code_is_required": "핀 코드가 필요합니다.",
 	"wrong_credentials": "잘못된 자격 증명을 입력했습니다.",
