--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,7 @@
   "enter_new_translation": "Enter new translation",
   "sign_in": "Sign in",
   "sign_up": "Sign up",
+  "continue": "Continue",
   "enter_pin_code": "Enter pin code",
   "pin_code_is_required": "Pin code is required.",
   "wrong_credentials": "You have entered the wrong credentials.",
