--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -10,6 +10,7 @@
 	"enter_new_translation": "វាយការបកប្រែថ្មី។",
 	"sign_in": "ចូល",
 	"sign_up": "ចុះ​ឈ្មោះ",
+	"please_sign_in": "អ្នកអាចចូលដោយមិនចាំបាច់ចុះឈ្មោះ។",
 	"continue": "បន្ត",
 	"enter_pin_code": "បញ្ចូលលេខកូដសម្ងាត់",
 	"pin_code_is_required": "តម្រូវ​ឱ្យ​មាន​កូដ PIN ។",
