--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -10,6 +10,7 @@
 	"enter_new_translation": "輸入新翻譯",
 	"sign_in": "登入",
 	"sign_up": "報名",
+	"please_sign_in": "您無需註冊即可登錄。",
 	"continue": "繼續",
 	"enter_pin_code": "輸入密碼",
 	"pin_code_is_required": "密碼是必需的。",
