feat: Remove sign up page

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -10,6 +10,7 @@
 	"enter_new_translation": "新しい翻訳を入力する",
 	"sign_in": "サインイン",
 	"sign_up": "サインアップ",
+	"or_create_account": "アカウントをお持ちでない場合、新規にアカウントが作成されます。",
 	"please_sign_in": "サインアップせずにサインインが可能です。",
 	"continue": "次へ進む",
 	"enter_pin_code": "PINコードを入力してください",
