--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -11,6 +11,7 @@
 	"sign_in": "ចូល",
 	"sign_up": "ចុះ​ឈ្មោះ",
 	"please_sign_in": "អ្នកអាចចូលដោយមិនចាំបាច់ចុះឈ្មោះ។",
+	"or_create_account": "ឬបង្កើតគណនីថ្មី ប្រសិនបើអ្នកមិនទាន់មាន។",
 	"continue": "បន្ត",
 	"enter_pin_code": "បញ្ចូលលេខកូដសម្ងាត់",
 	"pin_code_is_required": "តម្រូវ​ឱ្យ​មាន​កូដ PIN ។",
