--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,7 @@
   "enter_new_translation": "Enter new translation",
   "sign_in": "Sign in",
   "sign_up": "Sign up",
+  "or_create_account": "Or create a new account if you don't have one.",
   "continue": "Continue",
   "please_sign_in": "Signing up is not required. Please sign in.",
   "enter_pin_code": "Enter pin code",
