--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -18,6 +18,6 @@
 	"wrong_credentials": "អ្នក​បាន​បញ្ចូល​ព័ត៌មាន​សម្ងាត់​ខុស។",
 	"submit": "ដាក់ស្នើ",
 	"pin_code": "លេខសម្ងាត់",
-	"logout": "ចាកចេញ",
+	"sign_out": "ចាកចេញ",
 	"email": "អ៊ីមែល"
 }
