--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,6 +18,6 @@
   "wrong_credentials": "You have entered the wrong credentials.",
   "submit": "Submit",
   "pin_code": "PIN code",
-  "logout": "Logout",
+  "sign_out": "Sign out",
   "email": "Email"
 }
