--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -14,6 +14,7 @@
 	"or_create_account": "ឬបង្កើតគណនីថ្មី ប្រសិនបើអ្នកមិនទាន់មាន។",
 	"continue": "បន្ត",
 	"enter_pin_code": "បញ្ចូលលេខកូដសម្ងាត់",
+	"sent_pin_code": "យើងបានផ្ញើលេខកូដផ្ទៀងផ្ទាត់ទៅ {email}",
 	"pin_code_is_required": "តម្រូវ​ឱ្យ​មាន​កូដ PIN ។",
 	"wrong_credentials": "អ្នក​បាន​បញ្ចូល​ព័ត៌មាន​សម្ងាត់​ខុស។",
 	"submit": "ដាក់ស្នើ",
