fix: Fix speech API being called 3 times

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
   "translation": "Translation",
   "select_text_first": "Select text first",
   "lets_talk": "Let's talk",
-  "recognizing": "recognizing",
+  "recognizing": "Recognizing",
   "select_different_language": "Select different language",
   "enter_new_text": "Enter new text",
   "enter_new_translation": "Enter new translation",
