--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -20,5 +20,9 @@
 	"submit": "ដាក់ស្នើ",
 	"pin_code": "លេខសម្ងាត់",
 	"sign_out": "ចាកចេញ",
-	"email": "បញ្ចូលអ៊ីមែល"
+	"email": "បញ្ចូលអ៊ីមែល",
+	"confirm_delete": "បញ្ជាក់ការលុប",
+	"are_you_sure": "តើអ្នកពិតជាចង់លុបវាមែនទេ?",
+	"delete": "លុប",
+	"cancel": "បោះបង់"
 }
