--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,28 +1,29 @@
 {
-	"talk_title": "トーク",
-	"speech": "スピーチ",
-	"translation": "翻訳",
-	"select_text_first": "テキストを選択してください",
-	"lets_talk": "話してみましょう",
-	"recognizing": "認識中",
-	"select_different_language": "他の言語を選択してください",
-	"enter_new_text": "新しいテキストを入力する",
-	"enter_new_translation": "新しい翻訳を入力する",
-	"sign_in": "サインイン",
-	"sign_up": "サインアップ",
-	"or_create_account": "アカウントをお持ちでない場合、新規にアカウントが作成されます。",
-	"please_sign_in": "サインアップせずにサインインが可能です。",
-	"continue": "次へ進む",
-	"enter_pin_code": "PINコードを入力してください",
-	"sent_pin_code": "{email} 宛にPINコードを送信しました。",
-	"pin_code_is_required": "PINコードは必須です",
-	"wrong_credentials": "PINコードが間違っています。",
-	"submit": "送信",
-	"pin_code": "PINコード",
-	"sign_out": "サインアウト",
-	"email": "Eメールを入力する",
-	"confirm_delete": "削除",
+  "talk_title": "トーク",
+  "speech": "スピーチ",
+  "translation": "翻訳",
+  "select_text_first": "テキストを選択してください",
+  "lets_talk": "話してみましょう",
+  "recognizing": "認識中",
+  "select_different_language": "他の言語を選択してください",
+  "enter_new_text": "新しいテキストを入力する",
+  "enter_new_translation": "新しい翻訳を入力する",
+  "sign_in": "サインイン",
+  "sign_up": "サインアップ",
+  "or_create_account": "アカウントをお持ちでない場合、新規にアカウントが作成されます。",
+  "please_sign_in": "サインアップせずにサインインが可能です。",
+  "continue": "次へ進む",
+  "enter_pin_code": "PINコードを入力してください",
+  "sent_pin_code": "{email} 宛にPINコードを送信しました。",
+  "pin_code_is_required": "PINコードは必須です",
+  "wrong_credentials": "PINコードが間違っています。",
+  "submit": "送信",
+  "pin_code": "PINコード",
+  "sign_out": "サインアウト",
+  "email": "Eメールを入力する",
+  "confirm_delete": "削除",
   "are_you_sure": "削除しますか？",
   "delete": "削除",
-  "cancel": "キャンセル"
+  "cancel": "キャンセル",
+  "history": "履歴"
 }
