--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -22,7 +22,7 @@
   "sign_out": "サインアウト",
   "email": "Eメールを入力する",
   "confirm_delete": "削除",
-  "are_you_sure": "削除しますか？",
+  "are_you_sure": "削除してもよろしいですか？",
   "delete": "削除",
   "cancel": "キャンセル",
   "history": "履歴"
