--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -25,5 +25,6 @@
   "are_you_sure": "តើអ្នកពិតជាចង់លុបវាមែនទេ?",
   "delete": "លុប",
   "cancel": "បោះបង់",
-  "history": "ប្រវត្តិសាស្ត្រ"
+  "history": "ប្រវត្តិសាស្ត្រ",
+  "text_limit": "អ្នកអាចបកប្រែបានត្រឹមតែ 250 តួអក្សរប៉ុណ្ណោះ។"
 }
