--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,5 +25,6 @@
   "are_you_sure": "Are you sure you want to delete this?",
   "delete": "Delete",
   "cancel": "Cancel",
-  "history": "History"
+  "history": "History",
+  "text_limit": "You can only translate up to 250 characters."
 }
