--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -25,5 +25,6 @@
   "are_you_sure": "削除してもよろしいですか？",
   "delete": "削除",
   "cancel": "キャンセル",
-  "history": "履歴"
+  "history": "履歴",
+  "text_limit": "翻訳できるのは 250文字までです。"
 }
