--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -25,5 +25,6 @@
   "are_you_sure": "정말 삭제하시겠습니까?",
   "delete": "삭제",
   "cancel": "취소",
-  "history": "히스토리"
+  "history": "히스토리",
+  "text_limit": "최대 250자까지만 번역할 수 있습니다."
 }
