Add other languages to copy notification #308

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,5 +26,6 @@
   "delete": "Delete",
   "cancel": "Cancel",
   "history": "History",
-  "text_limit": "You can only translate up to 250 characters."
+  "text_limit": "You can only translate up to 250 characters.",
+  "copied": "Copied"
 }
