--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -26,5 +26,6 @@
   "delete": "削除",
   "cancel": "キャンセル",
   "history": "履歴",
-  "text_limit": "翻訳できるのは 250文字までです。"
+  "text_limit": "翻訳できるのは 250文字までです。",
+  "copied": "コピーしました"
 }
