--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -26,5 +26,6 @@
   "delete": "刪除",
   "cancel": "取消",
   "history": "歷史",
-  "text_limit": "您最多只能翻譯 250 個字符。"
+  "text_limit": "您最多只能翻譯 250 個字符。",
+  "copied": "已復制"
 }
