Fix Spanish select_different_language #310

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -5,7 +5,7 @@
   "select_text_first": "Seleccionar texto primero",
   "lets_talk": "Hablemos",
   "recognizing": "Reconociendo",
-  "select_ different_language": "Seleccionar otro idioma",
+  "select_different_language": "Seleccionar otro idioma",
   "enter_new_text": "Ingrese nuevo texto",
   "enter_new_translation": "Ingresar nueva traducción",
   "sign_in": "Iniciar sesión",
