--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,31 +1,31 @@
 {
-  "talk_title": "Hablar",
-  "discurso": "Discurso",
-  "traducción": "Traducción",
-  "select_text_first": "Seleccionar texto primero",
-  "lets_talk": "Hablemos",
-  "reconociendo": "Reconociendo",
-  "select_ different_language": "Seleccionar otro idioma",
-  "enter_new_text": "Ingrese nuevo texto",
-  "enter_new_translation": "Ingresar nueva traducción",
-  "sign_in": "Iniciar sesión",
-  "sign_up": "Registrarse",
-  "or_create_account": "O crea una nueva cuenta si no tienes una.",
-  "continuar": "Continuar",
-  "please_sign_in": "No es necesario registrarse. Inicie sesión.",
-  "enter_pin_code": "Ingrese el código PIN",
-  "sent_pin_code": "Hemos enviado un código de verificación a {email}.",
-  "pin_code_is_required": "Se requiere el código PIN.",
-  "wrong_credentials": "Has ingresado las credenciales incorrectas.",
-  "enviar": "enviar",
-  "pin_code": "Código PIN",
-  "sign_out": "Cerrar sesión",
-  "email": "Ingrese el correo electrónico",
-  "confirm_delete": "Confirmar eliminación",
-  "are_you_sure": "¿Estás seguro de que quieres borrar esto?",
-  "eliminar": "Eliminar",
-  "cancelar": "Cancelar",
-  "historia": "Historia",
-  "text_limit": "Solo puedes traducir hasta 250 caracteres.",
-  "copiado": "Copiado"
+  "talk_title": "Nói chuyện",
+  "speech": "bài phát biểu",
+  "translation": "Bản dịch",
+  "select_text_first": "Chọn văn bản trước",
+  "lets_talk": "Hãy nói chuyện",
+  "recognizing": "Nhận ra",
+  "select_different_language": "Chọn ngôn ngữ khác",
+  "enter_new_text": "Nhập văn bản mới",
+  "enter_new_translation": "Nhập bản dịch mới",
+  "sign_in": "Đăng nhập",
+  "sign_up": "Đăng ký",
+  "or_create_account": "Hoặc tạo một tài khoản mới nếu bạn chưa có.",
+  "continue": "tiếp tục",
+  "please_sign_in": "Không cần đăng ký. Vui lòng đăng nhập.",
+  "enter_pin_code": "Nhập mã PIN",
+  "sent_pin_code": "Chúng tôi đã gửi mã xác minh tới {email}.",
+  "pin_code_is_required": "Mã PIN là bắt buộc.",
+  "wrong_credentials": "Bạn đã nhập sai thông tin xác thực.",
+  "submit": "gửi",
+  "pin_code": "Mã PIN",
+  "sign_out": "Đăng xuất",
+  "email": "Nhập email",
+  "confirm_delete": "Xác nhận xóa",
+  "are_you_sure": "Bạn có chắc muốn xóa cái này không?",
+  "delete": "Xóa",
+  "cancel": "Hủy",
+  "history": "Lịch sử",
+  "text_limit": "Bạn chỉ có thể dịch tối đa 250 ký tự.",
+  "copied": "Đã sao chép"
 }
