Chat: Create Basic Functionality #364

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,5 +27,6 @@
   "cancel": "Cancel",
   "history": "History",
   "text_limit": "You can only translate up to 250 characters.",
-  "copied": "Copied"
+  "copied": "Copied",
+  "name": "Name"
 }
