--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -27,5 +27,6 @@
   "cancel": "キャンセル",
   "history": "履歴",
   "text_limit": "翻訳できるのは 250文字までです。",
-  "copied": "コピーしました"
+  "copied": "コピーしました",
+  "name": "名前"
 }
