--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -27,5 +27,6 @@
   "cancel": "បោះបង់",
   "history": "ប្រវត្តិសាស្ត្រ",
   "text_limit": "អ្នកអាចបកប្រែបានត្រឹមតែ 250 តួអក្សរប៉ុណ្ណោះ។",
-  "copied": "ចម្លង"
+  "copied": "ចម្លង",
+  "name": "ឈ្មោះ"
 }
