--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -27,5 +27,6 @@
   "cancel": "취소",
   "history": "히스토리",
   "text_limit": "최대 250자까지만 번역할 수 있습니다.",
-  "copied": "복사했습니다"
+  "copied": "복사했습니다",
+  "name": "이름"
 }
