--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -27,5 +27,6 @@
   "cancel": "Hủy",
   "history": "Lịch sử",
   "text_limit": "Bạn chỉ có thể dịch tối đa 250 ký tự.",
-  "copied": "Đã sao chép"
+  "copied": "Đã sao chép",
+  "name": "Tên"
 }
