--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -28,5 +28,6 @@
   "history": "Lịch sử",
   "text_limit": "Bạn chỉ có thể dịch tối đa 250 ký tự.",
   "copied": "Đã sao chép",
-  "name": "Tên"
+  "name": "Tên",
+  "please_allow_notification": "Để nhận thông báo chưa đọc, vui lòng cho phép thông báo trong trình duyệt của bạn."
 }
