--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -28,5 +28,6 @@
   "history": "ប្រវត្តិសាស្ត្រ",
   "text_limit": "អ្នកអាចបកប្រែបានត្រឹមតែ 250 តួអក្សរប៉ុណ្ណោះ។",
   "copied": "ចម្លង",
-  "name": "ឈ្មោះ"
+  "name": "ឈ្មោះ",
+  "please_allow_notification": "ដើម្បីទទួលបានការជូនដំណឹងដែលមិនទាន់អាន សូមអនុញ្ញាតការជូនដំណឹងនៅក្នុងកម្មវិធីរុករករបស់អ្នក។"
 }
