Fix: Chat: Translate latest log #387

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -29,5 +29,7 @@
   "text_limit": "Sólo puede traducir hasta 250 caracteres.",
   "copied": "Copiado",
   "name": "Nombre",
-  "please_allow_notification": "Para recibir notificaciones no leídas, permita las notificaciones en su navegador."
+  "please_allow_notification": "Para recibir notificaciones no leídas, permita las notificaciones en su navegador.",
+  "join": "Unirse",
+  "leave": "Dejar"
 }
