--- a/src/locales/km.json
+++ b/src/locales/km.json
@@ -29,5 +29,7 @@
   "text_limit": "អ្នកអាចបកប្រែបានត្រឹមតែ 250 តួអក្សរប៉ុណ្ណោះ។",
   "copied": "ចម្លង",
   "name": "ឈ្មោះ",
-  "please_allow_notification": "ដើម្បីទទួលបានការជូនដំណឹងដែលមិនទាន់អាន សូមអនុញ្ញាតការជូនដំណឹងនៅក្នុងកម្មវិធីរុករករបស់អ្នក។"
+  "please_allow_notification": "ដើម្បីទទួលបានការជូនដំណឹងដែលមិនទាន់អាន សូមអនុញ្ញាតការជូនដំណឹងនៅក្នុងកម្មវិធីរុករករបស់អ្នក។",
+  "join": "ចូលរួម",
+  "leave": "ចាកចេញ"
 }
