--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -29,5 +29,7 @@
   "text_limit": "최대 250자까지만 번역할 수 있습니다.",
   "copied": "복사했습니다",
   "name": "이름",
-    "please_allow_notification": "읽지 않은 알림을 받으려면 브라우저에서 알림을 허용하세요."
+    "please_allow_notification": "읽지 않은 알림을 받으려면 브라우저에서 알림을 허용하세요.",
+    "join": "가입하다",
+    "leave": "떠나다"
 }
