--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,5 +29,7 @@
   "text_limit": "You can only translate up to 250 characters.",
   "copied": "Copied",
   "name": "Name",
-  "please_allow_notification": "To receive unread notifications, please allow notifications in your browser."
+  "please_allow_notification": "To receive unread notifications, please allow notifications in your browser.",
+  "join": "Join",
+  "leave": "Leave"
 }
