--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -29,5 +29,7 @@
   "text_limit": "Bạn chỉ có thể dịch tối đa 250 ký tự.",
   "copied": "Đã sao chép",
   "name": "Tên",
-  "please_allow_notification": "Để nhận thông báo chưa đọc, vui lòng cho phép thông báo trong trình duyệt của bạn."
+  "please_allow_notification": "Để nhận thông báo chưa đọc, vui lòng cho phép thông báo trong trình duyệt của bạn.",
+  "join": "Tham gia",
+  "leave": "Rời khỏi"
 }
