Notify when member joined / leaved #409

--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -31,5 +31,7 @@
 	"name": "اسم",
 	"please_allow_notification": "لتلقي الإشعارات غير المقروءة ، يرجى السماح بالإشعارات في متصفحك.",
 	"join": "انضم",
-	"leave": "غادر"
+	"leave": "غادر",
+	"joined": "{name} انضم إلى المحادثة.",
+	"leaved": "{name} غادر المحادثة."
 }
