--- a/src/locales/cmn-TW.json
+++ b/src/locales/cmn-TW.json
@@ -31,5 +31,7 @@
   "name": "名字",
   "please_allow_notification": "要接收未讀通知，請在您的瀏覽器中允許通知。",
   "join": "加入",
-  "leave": "離開"
+  "leave": "離開",
+  "joined": "{name} 加入了對話。",
+  "leaved": "{name} 離開了對話。"
 }
