--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -31,5 +31,7 @@
   "name": "नाम",
   "please_allow_notification": "अपठित अधिसूचनाओं को प्राप्त करने के लिए, कृपया अपने ब्राउज़र में अधिसूचनाओं की अनुमति दें।",
   "join": "जुड़ें",
-  "leave": "छोड़ें"
+  "leave": "छोड़ें",
+  "joined": "{name} वार्तालाप में शामिल हुए।",
+  "leaved": "{name} वार्तालाप छोड़ गए।"
 }
