--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -31,5 +31,7 @@
   "name": "ឈ្មោះ",
   "please_allow_notification": "ដើម្បីទទួលបានការជូនដំណឹងដែលមិនទាន់អាន សូមអនុញ្ញាតការជូនដំណឹងនៅក្នុងកម្មវិធីរុករករបស់អ្នក។",
   "join": "ចូលរួម",
-  "leave": "ចាកចេញ"
+  "leave": "ចាកចេញ",
+  "joined": "{name} បានចូលរួមក្នុងការពិភាក្សា។",
+  "leaved": "{name} បានចាកចេញពីការពិភាក្សា។"
 }
