--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -31,5 +31,7 @@
   "name": "Имя",
   "please_allow_notification": "Чтобы получать непрочитанные уведомления, разрешите уведомления в вашем браузере.",
   "join": "Присоединиться",
-  "leave": "Покинуть"
+  "leave": "Покинуть",
+  "joined": "{name} присоединился к разговору.",
+  "leaved": "{name} покинул разговор."
 }
