--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -31,5 +31,7 @@
   "name": "ชื่อ",
   "please_allow_notification": "หากต้องการรับการแจ้งเตือนที่ยังไม่ได้อ่าน โปรดอนุญาตการแจ้งเตือนในเบราว์เซอร์ของคุณ",
   "join": "เข้าร่วม",
-  "leave": "ออก"
+  "leave": "ออก",
+  "joined": "{name} เข้าร่วมในการสนทนา",
+  "leaved": "{name} ออกจากการสนทนา"
 }
