--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -29,7 +29,9 @@
   "text_limit": "최대 250자까지만 번역할 수 있습니다.",
   "copied": "복사했습니다",
   "name": "이름",
-    "please_allow_notification": "읽지 않은 알림을 받으려면 브라우저에서 알림을 허용하세요.",
-    "join": "가입하다",
-    "leave": "떠나다"
+  "please_allow_notification": "읽지 않은 알림을 받으려면 브라우저에서 알림을 허용하세요.",
+  "join": "가입하다",
+  "leave": "떠나다",
+  "joined": "{name}님이 대화에 참여했습니다.",
+  "leaved": "{name}님이 대화에서 나갔습니다."
 }
