Support more languages #509 add kn-IN

--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -33,5 +33,5 @@
 	"join": "ചേരുക",
 	"leave": "വിടുക",
 	"joined": "{name} സംഭാഷണത്തിൽ ചേർന്നു.",
-	"leved": "{name} സംഭാഷണം വിട്ടു."
+	"leaved": "{name} സംഭാഷണം വിട്ടു."
 }
