--- a/src/locales/ta-IN.json
+++ b/src/locales/ta-IN.json
@@ -32,6 +32,6 @@
 	"please_allow_notification": "படிக்காத அறிவிப்புகளைப் பெற, உங்கள் உலாவியில் அறிவிப்புகளை அனுமதிக்கவும்.",
 	"join": "சேர்",
 	"leave": "விடு",
-	"leaved": "{name} உரையாடலில் சேர்ந்தார்.",
-	"leved": "{name} உரையாடலை விட்டு வெளியேறினார்."
+	"joined": "{name} உரையாடலில் சேர்ந்தார்.",
+	"leaved": "{name} உரையாடலை விட்டு வெளியேறினார்."
 }
