--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -33,5 +33,5 @@
 	"join": "చేరండి",
 	"leave": "వదిలించు",
 	"joined": "{name} సంభాషణలో చేరారు.",
-	"leved": "{name} సంభాషణ నుండి నిష్క్రమించారు."
+	"leaved": "{name} సంభాషణ నుండి నిష్క్రమించారు."
 }
