--- a/src/locales/pa-IN.json
+++ b/src/locales/pa-IN.json
@@ -14,7 +14,7 @@
 	"continue": "ਜਾਰੀ ਰੱਖੋ",
 	"please_sign_in": "ਸਾਈਨ ਅੱਪ ਕਰਨ ਦੀ ਲੋੜ ਨਹੀਂ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਸਾਈਨ ਇਨ ਕਰੋ।",
 	"enter_pin_code": "ਪਿੰਨ ਕੋਡ ਦਾਖਲ ਕਰੋ",
-	"sent_pin_code": "ਅਸੀਂ {ਈਮੇਲ} 'ਤੇ ਇੱਕ ਪੁਸ਼ਟੀਕਰਨ ਕੋਡ ਭੇਜਿਆ ਹੈ।",
+	"sent_pin_code": "ਅਸੀਂ {email} 'ਤੇ ਇੱਕ ਪੁਸ਼ਟੀਕਰਨ ਕੋਡ ਭੇਜਿਆ ਹੈ।",
 	"pin_code_is_required": "ਪਿੰਨ ਕੋਡ ਲੋੜੀਂਦਾ ਹੈ।",
 	"wrong_credentials": "ਤੁਸੀਂ ਗਲਤ ਪ੍ਰਮਾਣ ਪੱਤਰ ਦਾਖਲ ਕੀਤੇ ਹਨ।",
 	"submit": "ਸਬਮਿਟ ਕਰੋ",
